--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>This is a website</h1>
+    <a href="/contact.html"></a>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A, provident repellat optio recusandae sint error vel officiis itaque unde facere, ipsa perferendis mollitia est ad deleniti dignissimos asperiores sed? Et?</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A, provident repellat optio recusandae sint error vel officiis itaque unde facere, ipsa perferendis mollitia est ad deleniti dignissimos asperiores sed? Et?</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A, provident repellat optio recusandae sint error vel officiis itaque unde facere, ipsa perferendis mollitia est ad deleniti dignissimos asperiores sed? Et?</p>
