--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>This is a website</h1>
-    <a href="/contact.html">contact</a>
+    <a href="/GitWebsite_Test/contact.html">contact</a>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A, provident repellat optio recusandae sint error vel officiis itaque unde facere, ipsa perferendis mollitia est ad deleniti dignissimos asperiores sed? Et?</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A, provident repellat optio recusandae sint error vel officiis itaque unde facere, ipsa perferendis mollitia est ad deleniti dignissimos asperiores sed? Et?</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A, provident repellat optio recusandae sint error vel officiis itaque unde facere, ipsa perferendis mollitia est ad deleniti dignissimos asperiores sed? Et?</p>
